Added swagger ui

--- a/automarket24-backend/src/main/resources/application.properties
+++ b/automarket24-backend/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=automarket24-backend
 
 spring.jpa.open-in-view=true
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs-ui.html
+springdoc.swagger-ui.operationsSorter=method
+
 spring.config.import=file:.env.properties
 
 spring.datasource.url=${DB_URL}
