Added jwt security

--- a/automarket24-backend/src/main/resources/application.properties
+++ b/automarket24-backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.security.secret-key = ${SECRET_KEY}
