--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,20 @@
 version: '3'
 
 services:
+  database:
+    build:
+      context: .
+      dockerfile: ./docker/postgresql/Dockerfile
+      args:
+        - DB_PASSWORD=${DB_PASSWORD}
+        - DB_USER=${DB_USER}
+        - DB_NAME=${DB_NAME}
+    ports:
+      - "6010:5432"
+
   file-server:
     build:
       context: .
-      dockerfile: ./nginx/Dockerfile
+      dockerfile: ./docker/nginx/Dockerfile
     ports:
-      - "6060:6060"
+      - "6020:4321"
