Create endpoint to remove user

--- a/automarket24-backend/src/main/resources/application.yaml
+++ b/automarket24-backend/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
   config:
     import: file:.env.properties
 
+  devtools:
+    restart:
+      log-condition-evaluation-delta: false
+
   jpa:
     open-in-view: true
     hibernate:
