--- a/automarket24-backend/src/main/resources/application.yaml
+++ b/automarket24-backend/src/main/resources/application.yaml
@@ -22,6 +22,11 @@ spring:
   security:
     secret-key: ${SECRET_KEY}
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+
 springdoc:
   api-docs:
     path: /api-docs
