--- a/automarket24-backend/src/main/resources/application.yaml
+++ b/automarket24-backend/src/main/resources/application.yaml
@@ -27,6 +27,11 @@ spring:
       max-file-size: 10MB
       max-request-size: 50MB
 
+  rabbitmq:
+    port: 6030
+    username: user
+    password: password
+
 springdoc:
   api-docs:
     path: /api-docs
