--- a/automarket24-frontend/package.json
+++ b/automarket24-frontend/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/amqplib": "^0.10.5",
+    "amqplib": "^0.10.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.2",
